# pytauri-py-react

./: .gitignore  README.md  Tauri.toml  index.css  index.html  index1.css  main.py  package.json  pnpm-lock.yaml  pyinstaller.spec  pyproject.toml  pytauri-pymd.md  test_training.py  test_training_monitor.py  test_training_simple.py  vite.config.ts
capabilities/: default.toml
pysrc/: __init__.py  __main__.py  synthetic_dpo.py  train_judge.py  utils.py
pysrc/commands/: __init__.py  config.py  docling_pdf.py  greetings.py  training.py
pysrc/mlx_lm_lora/: __init__.py  synthetic_prompts.py  synthetic_sft.py  train.py  visuals.py
pysrc/mlx_lm_lora/trainer/: dpo_trainer.py  grpo_reward_functions.py  grpo_trainer.py  rlhf_reinforce_trainer.py  xpo_trainer.py
pysrc/trainer/: cpo_trainer.py  datasets.py  judge.py  online_dpo_trainer.py  orpo_trainer.py  ppo_trainer.py  sft_trainer.py
src/: App.css  App.tsx  Test.tsx  main.tsx  resetUI.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: ConvertPDF.tsx  TrainingConfigForm.module.css  TrainingConfigForm.tsx  config.ts
