[project]
name = "pytauri-react-starter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytauri-wheel>=0.8.0",
]

[project.scripts]
pytauri-react-starter = "main:main"

[project.urls]
Homepage = "https://github.com/hayatullah87/pytauri-react-starter"
Repository = "https://github.com/hayatullah87/pytauri-react-starter"
Issues = "https://github.com/hayatullah87/pytauri-react-starter/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "main.py",
    "Tauri.toml",
    "capabilities/default.toml",
    "icons/icon.ico",
    "README.md",
    "LICENSE",
    "build/",
    "pysrc/",
    "src-tauri/"
]

[dependency-groups]
dev = [
    "hatchling>=1.27.0",
]